# grasshopper

./: .gitignore  Dockerfile  README.md  grasshopper.py  pyproject.toml
.github/workflows/: grasshopper-tracker-artifacts.yml  grasshopper-tracker.yml
grasshopper/: __init__.py  grasshopper.py
grasshopper/tracker/: __init__.py  api.py  auth.py  dashboard.py
grasshopper/tracker/model/: testrun.py  user.py
grasshopper/tracker/model/schemas/: tracker.sql
grasshopper/tracker/static/: style.css
grasshopper/tracker/templates/: base.html  index.html
grasshopper/tracker/templates/auth/: jwt.html  register.html
tracker/: __init__.py  api.py  auth.py  dashboard.py  db.py  index.py  schema.sql
tracker/app/: authentication.py
tracker/model/: db.py  testrun.py  user.py
tracker/model/schemas/: tracker.sql
tracker/schemas/: tracker.sql
tracker/static/: style.css
tracker/templates/: base.html  index.html
tracker/templates/dashboard/: index.html
