[tool.poetry]
name = "tracker"
version = "0.1.0"
description = "Time tracker for test apps"
authors = ["Arturo Escudero <darkturo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
