[tool.poetry]
name = "grasshopper"
version = "0.2.0"
description = "CPU usage tracker for testing apps concurrently"
authors = ["Arturo Escudero <darkturo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
flask-jwt-extended = "^4.7.1"
psutil = "^6.1.1"
requests = "^2.32.3"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
grasshopper = "grasshopper:grasshopper.grasshopper_cli"
